//Server CRUD ->fix for  jpa resource local using add update @PUT method
//AngularJS client
ng-if change with ng-show/hide
fix add/update data
add preloader
add loading animation

--- a/src/main/webapp/page/app/app.css
+++ b/src/main/webapp/page/app/app.css
@@ -56,3 +56,7 @@ md-toolbar h3 {
     color: #FB8C00;
 }
 
+.preloader {
+    padding: 50px;
+    background: url('assets/img/Preloader_3.gif') no-repeat 50% 50% transparent;
+}
